--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,9 @@ label, h3 {
 	margin-left: 5px;
 	font-weight: normal;
 }
+
+.submit-feedback {
+    margin-left: 8px;
+    margin-top: 22px;
+    position: absolute;
+}
